kubernates-resoures/membership-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: membership-service
  labels:
    app: membership-service
spec:
  containers:
  - name: membership-service
    image: membership-service:latest
