kubernates-resoures/membership-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: membership-service
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
  selector:
    app: membership-service
